--- a/views/Admin/menus/index.ejs
+++ b/views/Admin/menus/index.ejs
@@ -68,7 +68,8 @@
                                     <th scope="col"><input type="checkbox" id="checkAll"></th>
                                     <th scope="col" style="width:300px">Tên menu</th>
                                     <th scope="col">Thứ tự</th>
-                                    <th scope="col">Active</th>                                   
+                                    <th scope="col">Active</th>    
+                                    <th scope="col">Link Ngoài</th>                                   
                                     <th scope="col">Vị trí</th>                                                                  
                                     <th scope="col">Người sửa</th>
                                     <th scope="col">Ngày sửa</th>  
