--- a/views/Admin/products/edit.ejs
+++ b/views/Admin/products/edit.ejs
@@ -162,7 +162,7 @@
                         </div>
                          <div class="row form-group">
                         <div class="col col-md-3">&nbsp;</div>
-                        <div class="col-12 col-md-9"><button type="submit" id="bntAdd" class="btn btn-primary btn-sm"><i class="fa fa-plus-square-o"></i> Thêm mới</button>
+                        <div class="col-12 col-md-9"><button type="submit" id="bntAdd" class="btn btn-primary btn-sm"><i class="fa fa-refresh"></i> Cập nhật</button>
                         <a href="/admin/product/Index" class="btn btn-danger btn-sm"><i class="fa fa-reply"></i> Quay lại</a> </div>
                     </div> 
                     
