--- a/views/Admin/Advertisement/index.ejs
+++ b/views/Admin/Advertisement/index.ejs
@@ -22,7 +22,7 @@
             <div class="page-title">
                 <ol class="breadcrumb text-right">
                     <li><a href="index">Trang chủ</a></li>                  
-                    <li class="active"><a href="/admin/advertisement/index">Danh sách các tin tức</a></li>
+                    <li class="active"><a href="/admin/advertisement/index">Danh sách các quảng cáo</a></li>
                 </ol>
             </div>
         </div>
