--- a/views/Admin/categorys/indexType.ejs
+++ b/views/Admin/categorys/indexType.ejs
@@ -37,7 +37,7 @@
                         <div class="col col-md-6">
                             <form action="/admin/category/searchType/<%= typeId %>" method="POST" class="form-horizontal">
                                 <div class="input-group">
-                                    <input type="text" class="form-control col-md-6 form-control-sm"  name="textsearch" id="textsearch" placeholder="Nhập từ khóa tìm kiếm...">
+                                    <input type="text" class="form-control col-md-6 form-control-sm"  name="textsearch" id="textsearch" value="<%= searchVal %>" placeholder="Nhập từ khóa tìm kiếm...">
                                         <span class="input-group-btn">
                                         <button class="btn btn-info btn-sm" type="submit"><i class="fa fa-search fa-fw"></i> Tìm kiếm</button>
                                         </span>
