--- a/views/Admin/news/index.ejs
+++ b/views/Admin/news/index.ejs
@@ -40,7 +40,7 @@
                                     <select class="form-control col-md-3 form-control-sm" id="slcate" name="slcate" style="width:250px;">
                                         <option value="1">Tất cả</option>
                                         <%- include('../../partials/backend/dropallTree', {items: listcate, level: 1, id_check: id_check }) %></select>
-                                    <input type="text" class="form-control col-md-5 form-control-sm" name="textsearch" id="textsearch" placeholder="Nhập từ khóa tìm kiếm...">
+                                    <input type="text" class="form-control col-md-5 form-control-sm" name="textsearch" id="textsearch" value="<%= searchVal %>" placeholder="Nhập từ khóa tìm kiếm...">
                                     <span class="input-group-btn">
                                     <button class="btn btn-info btn-sm" type="submit"><i class="fa fa-search fa-fw"></i> Tìm kiếm</button>
                                     </span>
