add logo and banner

--- a/views/partials/backend/aside.ejs
+++ b/views/partials/backend/aside.ejs
@@ -39,8 +39,7 @@
                     <li><a href="#"title="Đơn hoàn thành"> <i class="menu-icon fa fa-shopping-bag"></i>Hoàn thành</a></li>
                     <h3 class="menu-title">Quảng cáo & Logo</h3><!-- /.menu-title -->     
                     <li><a href="/admin/advertisement/index" title="Ảnh quảng cáo"> <i class="menu-icon fa fa-money"></i>Ảnh quảng cáo</a></li>                   
-                    <li><a href="#" title="Ảnh logo"> <i class="menu-icon fa fa-adjust"></i>Logo</a></li>
-                    <li><a href="#" title="Ảnh banner"> <i class="menu-icon fa fa-picture-o"></i>Banner</a></li>
+                    <li><a href="/admin/logo/index" title="Ảnh logo và banner"> <i class="menu-icon fa fa-picture-o"></i>Logo & Banner</a></li>                    
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
