add order model

--- a/views/Admin/products/add.ejs
+++ b/views/Admin/products/add.ejs
@@ -72,6 +72,10 @@
                         <div class="col-12 col-md-9 mserro"><textarea  id="metaDescription" name="metaDescription" placeholder="Nhập Description" class="form-control"  data-rule-required="true" rows="2"></textarea></div>
                     </div>
                     <div class="row form-group">
+                        <div class="col col-md-3"><label class="form-control-label">Mã sản phẩm :</label></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="productCode" name="productCode" placeholder="Nhập mã sản phẩm" class="form-control" data-rule-required="true"></div>
+                    </div>
+                    <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Số lượng:</label></div>
                         <div class="col-12 col-md-9 mserro"><input type="text" id="quantum" name="quantum" placeholder="Nhập số sản phẩm" class="form-control"  data-rule-required="true"  data-rule-number="true"></div>
                     </div>
