--- a/views/partials/backend/header.ejs
+++ b/views/partials/backend/header.ejs
@@ -85,7 +85,7 @@
                     <div class="user-area dropdown float-right">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <% if(users.ImageUrl != ''){ %>
-                            <img class="user-avatar rounded-circle" src="/uploads/<%= users.ImageUrl %>"  alt="<%= users.name %>">
+                            <img class="user-avatar rounded-circle" src="/uploads/avata/<%= users.ImageUrl %>"  alt="<%= users.name %>">
                         <% } else { %>
                          <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="<%= users.name %>">
                         <%} %>
