--- a/views/partials/backend/aside.ejs
+++ b/views/partials/backend/aside.ejs
@@ -37,9 +37,7 @@
                         </li>                       
                     <% }) %> 
                     <h3 class="menu-title">Quản lý đơn hàng</h3><!-- /.menu-title -->     
-                    <li><a href="#" title="Đơn mới đặt"> <i class="menu-icon fa fa-shopping-cart"></i>Đơn mới đặt</a></li>                   
-                    <li><a href="#" title="Đơn đang sửa lý"> <i class="menu-icon fa fa-cogs"></i>Đang sử lý</a></li>
-                    <li><a href="#"title="Đơn hoàn thành"> <i class="menu-icon fa fa-shopping-bag"></i>Hoàn thành</a></li>
+                    <li><a href="/admin/order/index" title="Danh sách đơn hàng"> <i class="menu-icon fa fa-shopping-cart"></i>Danh sách đơn hàng</a></li> 
                     <h3 class="menu-title">Quảng cáo & Logo</h3><!-- /.menu-title -->     
                     <li><a href="/admin/advertisement/index" title="Ảnh quảng cáo"> <i class="menu-icon fa fa-money"></i>Ảnh quảng cáo</a></li>                   
                     <li><a href="/admin/logo/index" title="Ảnh logo và banner"> <i class="menu-icon fa fa-picture-o"></i>Logo & Banner</a></li>                    
